Add local font definition

--- a/packages/web/src/lib/assets/fonts/kcc-jeongbeom/style.css
+++ b/packages/web/src/lib/assets/fonts/kcc-jeongbeom/style.css
@@ -2,5 +2,5 @@
 	font-family: 'KCC Jeongbeom';
 	font-weight: normal;
 	font-display: swap;
-	src: url('./KCC-Jeongbeom.ttf') format('truetype');
+	src: local('KCC-Jeongbeom'), url('./KCC-Jeongbeom.ttf') format('truetype');
 }
